--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="88" width="390" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cNF-Fo-Cvh">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cNF-Fo-Cvh" customClass="VideoCollectionView" customModule="TVApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="190" width="390" height="620"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="q0m-bm-1VH">
@@ -178,16 +178,16 @@
             </objects>
             <point key="canvasLocation" x="703.07692307692309" y="88.151658767772503"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Favorite Table View Controller-->
         <scene sceneID="uns-LQ-xMQ">
             <objects>
-                <tableViewController id="rQT-pF-ZUq" sceneMemberID="viewController">
+                <tableViewController id="rQT-pF-ZUq" customClass="FavoriteTableViewController" customModule="TVApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1it-fh-kjz">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="bHv-M5-Td4" detailTextLabel="vtx-aU-icx" style="IBUITableViewCellStyleSubtitle" id="I5S-09-GdV">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" textLabel="bHv-M5-Td4" detailTextLabel="vtx-aU-icx" style="IBUITableViewCellStyleSubtitle" id="I5S-09-GdV" customClass="FavoriteTableViewCell" customModule="TVApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="390" height="55.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="I5S-09-GdV" id="wzR-zg-RX9">
@@ -210,6 +210,10 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="subTitle" destination="vtx-aU-icx" id="zmp-9q-AfP"/>
+                                    <outlet property="title" destination="bHv-M5-Td4" id="YCh-Gt-BCS"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
